fixed scaling and canvas header overlap issue

--- a/assets/stylesheets/game.scss
+++ b/assets/stylesheets/game.scss
@@ -2,7 +2,7 @@
   color: #7fbfe2;
   font-size: 50px;
   font-family: "Latos", sans-serif;
-  margin-bottom: -7%;
+  margin-bottom: -60px;
 }
 
 .game {
